<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center">

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button1"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/scrollable_tab" 
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button2"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/fixed_tab" 
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button3"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/dynamic_tab"
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button4"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/no_tab_only_indicator"
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button5"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/work_with_fragment_container"
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button6"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/tab_with_badge_view" 
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button7"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/tab_with_custom_layout"
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

	<com.debashis.io.material.button.DnButton
		android:id="@+id/Button8"
		android:layout_width="250dp"
		android:layout_height="40dp"
		android:layout_marginHorizontal="10dp"
		android:text="@string/custom_navigator" 
		app:cornerRadius="30dp"
		app:rippleColor="@color/white"
		app:strokeColor="@color/white"
		app:strokeWidth="0dp"
		app:elevation="1dp"
		app:useScale="true"
		app:backgroundTint="@color/colorAccents"
		android:onClick="onClick"
		android:layout_marginBottom="10dp"/>

</LinearLayout>

